...
              variant="titleMedium"
              style={{
                fontFamily: fonts.bold,
                color: colors.buttonBackground,
              }}
            >
              Inventario
            </Text>
            <TouchableOpacity
              activeOpacity={0.7}
              onPress={() => this.props.navigation.navigate('InventoryList')}
            >
              <Text
...
              variables={[
                {
                  label:'Desde que inicié con Piida',
                  value:'all'
                },
                {
                  label:'Mes actual',
                  value:'month'
                },
                {
                  label:'Hoy',
                  value:'day'
                }
...
